@@ -15,19 +15,7 @@
 
 #define is_mus_type(x) internal_is_music_type (ly_symbol2scm (x))
 
-/** Music is anything that has duration and supports both time compression and
-  transposition.
-  
-  In Lily, everything that can be thought to have a length and a pitch
- (which has a duration which can be transposed) is considered "music",
 
-  Music is hierarchical: 
-
-  @see Music_sequence
-
-
-  TODO: make a equalp function for general music. 
-  */
 class Music
 {
 public:
@@ -51,8 +39,8 @@ public:
   void print () const;
 
   /// Transpose, with the interval central C to #p#
-  virtual void transpose (Pitch p);
-
+  void transpose (Pitch p);
+  
   /// Scale the music in time by #factor#.
   void compress (Moment factor);
   
