@@ -17,6 +17,13 @@
 #include "score.hh"
 #include "warn.hh"
 
+/*
+  Music is anything that has duration and supports both time compression
+  and transposition.
+  
+  In Lily, everything that can be thought to have a length and a pitch
+ (which has a duration which can be transposed) is considered "music",
+*/
 bool
 Music::internal_is_music_type (SCM k) const
 {
@@ -179,6 +186,9 @@ Music::compress (Moment factor)
 void
 Music::transpose (Pitch delta)
 {
+  if (to_boolean (get_property ("untransposable")))
+    return ;
+  
   for (SCM s = this->get_property_alist (true); scm_is_pair (s); s = scm_cdr (s))
     {
       SCM entry = scm_car (s);
@@ -191,7 +201,7 @@ Music::transpose (Pitch delta)
 
 	  if (abs (transposed.get_alteration ()) > DOUBLE_SHARP)
 	    {
-	      warning (_f ("Transposition by %s makes alteration larger than two",
+	      warning (_f ("Transposition by %s makes alteration larger than double",
 			   delta.to_string ()));
 	    }
 	}
