@@ -9,16 +9,6 @@ source file of the GNU LilyPond music typesetter
 
 #include "untransposable-music.hh"
 
-/*
-  todo: This one, together with Un_relativable_music is ugh.
-
-  fixthis.
-*/
-void
-Untransposable_music::transpose (Pitch)
-{
-}
-
 Pitch
 Untransposable_music::to_relative_octave (Pitch p)
 {
